microservice/dev-helmchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: msvc-node-svc
  labels:
    app: msvc-node
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    app: msvc-node
  ports:
    - port: 8000
      targetPort: 8000
